--- a/views/dashboards/chatevery.ejs
+++ b/views/dashboards/chatevery.ejs
@@ -1,11 +1,12 @@
-<%- include("./partials/header_admin") %>
-<%- include("./partials/sidebar") %>
+<%- include("../partials/header_admin") %>
+<%- include("../partials/sidebar") %>
 
 
-  <%- include("./partials/alerts") %>
+  
 <!-- nav -->
 
 <div class="main-content">
+  <%- include("../partials/alerts") %>
 <!-- forget password -->
 <section class="ftco-section contact-section ftco-degree-bg mt-9">
 <div class="container form">
@@ -71,5 +72,6 @@
 
   gtag('config', 'UA-23581568-13');
 </script>
+<%- include("../partials/footer") %>
 </body>
 </html>
