--- a/views/dashboards/users/user_withdrawing.ejs
+++ b/views/dashboards/users/user_withdrawing.ejs
@@ -15,9 +15,9 @@
                         <div class="padding-20">
                             <div class="text-right">
                                 <h3 class="font-light mb-0">
-                                    <i class="ti-arrow-up text-success"></i> $<%= userTotal %>.00
+                                    <i class="ti-arrow-up text-success"></i> $<%= revenue %>.00
                                 </h3>
-                                <span class="text-muted">Total Wallet ( Deposit + Revenue)</span>
+                                <span class="text-muted">Revenue Earned</span>
                             </div>
                         </div>
                     </div>
