--- a/views/partials/headerb.ejs
+++ b/views/partials/headerb.ejs
@@ -44,7 +44,7 @@
 <div class="nav-item cta">
 <a href="/register" class="nav-link nav-btn" style="color: #fff !important; font-weight: bold;"><span>Create Free Account</span></a>
 </div>
-<div class="nav-item cta">
+<div class="nav-item cta ml-3">
   <a href="/login" class="nav-link nav-btn" style="font-weight: bold;"><span>Login to Account</span></a>
   </div>
 </div>
