--- a/views/partials/user_sidebar.ejs
+++ b/views/partials/user_sidebar.ejs
@@ -23,6 +23,9 @@
             <li class="dropdown">
                 <a href="/home" class="nav-link"><i class="fas fa-home"></i><span>Dashboard</span></a>
             </li>
+            <li class="dropdown">
+                <a href="/fundwallet" class="nav-link"><i class="fas fa-home"></i><span>fundwallet</span></a>
+            </li>
            
             
             <li class="dropdown">
